--- a/index.html
+++ b/index.html
@@ -129,7 +129,23 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://lp-inspiration.netlify.app/" target="_blank">
+                            <a class='target' href="http://estate-ree.surge.sh/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/estate-ree.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
+                            <a class='target' href="http://kh.surge.sh/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/Home _ KH Real Estate.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
+                            <a class='target' href="https://inspired-app.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/inspiration-app.jpg");'>
                                 </div>
                             </a>
@@ -137,7 +153,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://click-to-grill.netlify.app/" target="_blank">
+                            <a class='target' href="https://ctog.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap"
                                     style='background-image: url("imgs/Click To Grill _.jpg");background-size: contain; background-position: center;'>
                                 </div>
@@ -146,7 +162,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://i-lead.netlify.app/" target="_blank">
+                            <a class='target' href="https://ilead.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap"
                                     style='background-image: url("imgs/ilead.jpg");background-size: contain; background-position: center;'>
                                 </div>
@@ -155,7 +171,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://osus-lp.netlify.app/" target="_blank">
+                            <a class='target' href="https://osus-lp.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap"
                                     style='background-image: url("imgs/landing_page.jpg");background-size: contain; background-position: center;'>
                                 </div>
@@ -164,16 +180,16 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://osus.netlify.app/" target="_blank">
+                            <a class='target' href="http://usos.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap"
-                                    style='background-image: url("imgs/Osus_Home.jpg");background-size: contain; background-position: center;'>
+                                    style='background-image: url("imgs/Osus, Home.png");background-size: cover; background-position: top;'>
                                 </div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://azzar.netlify.app/" target="_blank">
+                            <a class='target' href="https://azzar.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/azzar.jpg");'>
                                 </div>
                             </a>
@@ -181,7 +197,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://arab-affiliate.netlify.app/" target="_blank">
+                            <a class='target' href="https://a-affiliate.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/affiliate.jpg");'>
                                 </div>
                             </a>
@@ -189,50 +205,42 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://bandeja.netlify.app/" target="_blank">
+                            <a class='target' href="https://bandeja.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/bandeja.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://blueray.netlify.app/" target="_blank">
+                            <a class='target' href="https://blueray.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/blueray.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://lp-boho.netlify.app/" target="_blank">
+                            <a class='target' href="https://boho-ree.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/boho.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://foton-cars.netlify.app/" target="_blank">
+                            <a class='target' href="https://foton.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/foton.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://eg-icons.netlify.app/" target="_blank">
+                            <a class='target' href="https://eg-icons.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/icons.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://lp-mbg.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page.jpg");'>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="my-work">
-                            <a class='target' href="https://owest.netlify.app/" target="_blank">
+                            <a class='target' href="https://owest.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page-2.jpg");'>
                                 </div>
                             </a>
@@ -240,28 +248,21 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://maagaza.netlify.app/" target="_blank">
+                            <a class='target' href="https://magaza.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/magaza.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://meer.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/meer.jpg");'></div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="my-work">
-                            <a class='target' href="https://remax-ree.netlify.app/" target="_blank">
+                            <a class='target' href="https://remax-ree.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/remax.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://book-a-hotel.netlify.app/" target="_blank">
+                            <a class='target' href="https://booking-vac.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/reservation.jpg");'>
                                 </div>
                             </a>
@@ -269,14 +270,14 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://ugp-ree.netlify.app/" target="_blank">
+                            <a class='target' href="https://ugb.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/ugb.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://blue-elsokhna.netlify.app/" target="_blank">
+                            <a class='target' href="https://blue-sokhna.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/blueelsokhna.jpg");'>
                                 </div>
                             </a>
@@ -284,7 +285,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://i-workflow.netlify.app/" target="_blank">
+                            <a class='target' href="https://iworkflow.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/workflow.jpg");'>
                                 </div>
                             </a>
