--- a/index.html
+++ b/index.html
@@ -129,6 +129,38 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
+                            <a class='target' href="http://foe.surge.sh/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/اثاث مصر _ الرئيسيه.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
+                            <a class='target' href="http://foe-lp-1.surge.sh/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/lp-1اثاث مصر.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
+                            <a class='target' href="http://foe-lp-2.surge.sh/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/lp-2اثاث مصر.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
+                            <a class='target' href="http://lasirena.surge.sh/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/Home _ Lasirena.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
                             <a class='target' href="http://estate-ree.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/estate-ree.png");'>
                                 </div>
@@ -137,8 +169,24 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
+                            <a class='target' href="http://zone-ree.surge.sh/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/الرئيسيه - Zone.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
                             <a class='target' href="http://kh.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/Home _ KH Real Estate.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
+                            <a class='target' href="http://new-home-ree.surge.sh/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/Home _ New Home.png");'>
                                 </div>
                             </a>
                         </div>
@@ -287,6 +335,14 @@
                         <div class="my-work">
                             <a class='target' href="https://iworkflow.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/workflow.jpg");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
+                            <a class='target' href="https://bedaya.surge.sh/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/Bedaya.png");'>
                                 </div>
                             </a>
                         </div>
