--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://inspired-app.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/inspiration-app.jpg");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/inspirApp.jpg");'>
                                 </div>
                             </a>
                         </div>
@@ -221,7 +221,7 @@
                         <div class="my-work">
                             <a class='target' href="https://osus-lp.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap"
-                                    style='background-image: url("imgs/landing_page.jpg");background-size: contain; background-position: center;'>
+                                    style='background-image: url("imgs/osusLp.jpg");background-size: contain; background-position: center;'>
                                 </div>
                             </a>
                         </div>
