--- a/index.html
+++ b/index.html
@@ -129,6 +129,22 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
+                            <a class='target' href="http://senergic.surge.sh/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/Senergic _ HOME.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
+                            <a class='target' href="http://spedicool.surge.sh/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/Spedicool.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
                             <a class='target' href="http://foe.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/اثاث مصر _ الرئيسيه.png");'>
                                 </div>
