add another design

--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
+                            <a class='target' href="http://senergic-2.surge.sh/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/Senergic 2_ HOME.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
                             <a class='target' href="http://spedicool.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/Spedicool.png");'>
                                 </div>
