--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <div class="info">
                                 <i class="icon ion-ios-call"></i>
                                 <div class="right-area">
-                                    <h5>+20 011-22233312</h5>
+                                    <h5><a href="tel:01122233312">+20 011-22233312</a></h5>
                                     <h6>All The Day, 9AM - 7PM</h6>
                                 </div>
                             </div>
@@ -51,14 +51,16 @@
                             <div class="info">
                                 <i class="icon ion-md-chatboxes"></i>
                                 <div class="right-area">
-                                    <h5 class='my-mail'>mohamedelsayedhussein0@gmail.com</h5>
+                                    <h5 class='my-mail'><a href="mailto:mohamedelsayedhussein0@gmail.com">
+                                        mohamedelsayedhussein0@gmail.com
+                                    </a></h5>
                                     <h6>REPLY IN 24 HOURS</h6>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <a class="download-btn custom-btn wow fadeInRight animated" href="Resume .pdf" target='_blank'>
+                <a class="download-btn custom-btn wow fadeInRight animated" href="./Resume .pdf" target='_blank'>
                     <span>Download CV</span>
                 </a>
             </div>
@@ -139,6 +141,14 @@
                         <div class="my-work">
                             <a class='target' href="http://senergic-2.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/Senergic 2_ HOME.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
+                            <a class='target' href="https://elshahed.surge.sh/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/El-shahed-Development-Home (1).png");'>
                                 </div>
                             </a>
                         </div>
