--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                             analytical, rigorous and critical it is possible to develop a system that can be useful when
                             making business decisions.</p>
                         <p class="mb-5">I specialize in creating custom web sites for businesses – focusing
-                            primarily on customor satisfied.</p>
+                            primarily on customer satisfied.</p>
                         <div class="row pt-3 text-center">
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
