--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="http://senergic.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/Senergic _ HOME.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/Senergic _ HOME.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -140,7 +140,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="http://senergic-2.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/Senergic 2_ HOME.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/Senergic 2_ HOME.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -148,7 +148,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://elshahed.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/El-shahed-Development-Home (1).png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/El-shahed-Development-Home (1).avif");'>
                                 </div>
                             </a>
                         </div>
@@ -156,7 +156,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="http://spedicool.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/Spedicool.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/Spedicool.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -164,7 +164,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="http://foe.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/اثاث مصر _ الرئيسيه.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/اثاث مصر _ الرئيسيه.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -172,7 +172,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="http://foe-lp-1.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/lp-1اثاث مصر.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/lp-1اثاث مصر.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -180,7 +180,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="http://foe-lp-2.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/lp-2اثاث مصر.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/lp-2اثاث مصر.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -188,7 +188,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="http://lasirena.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/Home _ Lasirena.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/Home _ Lasirena.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -196,7 +196,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="http://estate-ree.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/estate-ree.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/estate-ree.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -204,7 +204,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="http://zone-ree.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/الرئيسيه - Zone.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/الرئيسيه - Zone.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -212,7 +212,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="http://kh.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/Home _ KH Real Estate.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/Home _ KH Real Estate.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -220,7 +220,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="http://new-home-ree.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/Home _ New Home.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/Home _ New Home.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -228,7 +228,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://inspired-app.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/inspirApp.jpg");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/inspirApp.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -237,7 +237,7 @@
                         <div class="my-work">
                             <a class='target' href="https://ctog.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap"
-                                    style='background-image: url("imgs/Click To Grill _.jpg");background-size: contain; background-position: center;'>
+                                    style='background-image: url("imgs/Click To Grill _.avif");background-size: contain; background-position: center;'>
                                 </div>
                             </a>
                         </div>
@@ -246,7 +246,7 @@
                         <div class="my-work">
                             <a class='target' href="https://ilead.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap"
-                                    style='background-image: url("imgs/ilead.jpg");background-size: contain; background-position: center;'>
+                                    style='background-image: url("imgs/ilead.avif");background-size: contain; background-position: center;'>
                                 </div>
                             </a>
                         </div>
@@ -255,7 +255,7 @@
                         <div class="my-work">
                             <a class='target' href="https://osus-lp.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap"
-                                    style='background-image: url("imgs/osusLp.jpg");background-size: contain; background-position: center;'>
+                                    style='background-image: url("imgs/osusLp.avif");background-size: contain; background-position: center;'>
                                 </div>
                             </a>
                         </div>
@@ -264,7 +264,7 @@
                         <div class="my-work">
                             <a class='target' href="http://usos.surge.sh/" target="_blank">
                                 <div class="fluidbox__wrap"
-                                    style='background-image: url("imgs/Osus, Home.png");background-size: cover; background-position: top;'>
+                                    style='background-image: url("imgs/Osus, Home.avif");background-size: cover; background-position: top;'>
                                 </div>
                             </a>
                         </div>
@@ -272,7 +272,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://azzar.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/azzar.jpg");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/azzar.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -280,7 +280,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://a-affiliate.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/affiliate.jpg");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/affiliate.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -288,42 +288,42 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://bandeja.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/bandeja.jpg");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/bandeja.avif");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://blueray.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/blueray.jpg");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/blueray.avif");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://boho-ree.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/boho.jpg");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/boho.avif");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://foton.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/foton.jpg");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/foton.avif");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://eg-icons.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/icons.jpg");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/icons.avif");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://owest.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page-2.jpg");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page-2.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -331,21 +331,21 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://magaza.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/magaza.jpg");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/magaza.avif");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://remax-ree.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/remax.jpg");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/remax.avif");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://booking-vac.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/reservation.jpg");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/reservation.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -353,14 +353,14 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://ugb.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/ugb.jpg");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/ugb.avif");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://blue-sokhna.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/blueelsokhna.jpg");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/blueelsokhna.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -368,7 +368,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://iworkflow.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/workflow.jpg");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/workflow.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -376,7 +376,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://bedaya.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/Bedaya.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/Bedaya.avif");'>
                                 </div>
                             </a>
                         </div>
